--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             position: fixed;
             inset: 0;
             pointer-events: none;
-            z-index: 1; /* behind header/main/cart, above background */
+            z-index: 1;
         }
 
         .shooting-star {
@@ -154,7 +154,7 @@
             inset: 0;
             background: radial-gradient(circle at top, #020617 0, #000 65%);
             z-index: 8;
-            transform: translateY(-100%); /* start OFF screen */
+            transform: translateY(-100%);
             transition: transform 0.9s cubic-bezier(0.22, 0.61, 0.36, 1);
             pointer-events: none;
         }
@@ -175,7 +175,7 @@
         ============================================================ */
         header {
             position: relative;
-            z-index: 5; /* above stars */
+            z-index: 5;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -187,7 +187,6 @@
 
         .logo { display: flex; align-items: center; gap: 10px; }
 
-        /* updated logo: horizontal, no circle crop */
         .logo img {
             height: 46px;
             width: auto;
@@ -294,109 +293,66 @@
         .hidden { display: none !important; }
 
         /* ============================================================
-           HERO / HOME SECTION
+           HERO / HOME SECTION (FULL HEIGHT)
         ============================================================ */
         #homeSection {
             max-width: 1200px;
-            margin: 30px auto 10px auto;
-            padding: 30px 20px 10px 20px;
+            margin: 0 auto;
+            padding: 40px 20px 30px 20px;
             position: relative;
             z-index: 5;
+            min-height: calc(100vh - 140px); /* fills the screen under header+bar */
             display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 30px;
-            flex-wrap: wrap;
+            justify-content: center;
+            text-align: center;
         }
 
         .hero-text {
-            flex: 1 1 260px;
+            max-width: 700px;
+        }
+
+        .hero-badge {
+            display: inline-block;
+            padding: 6px 16px;
+            border-radius: 999px;
+            border: 1px solid rgba(148,163,184,0.8);
+            font-size: 0.85rem;
+            margin-bottom: 20px;
+            color: #e5e7eb;
+            letter-spacing: 1px;
         }
 
         .hero-title {
-            font-size: 2.4rem;
-            font-weight: 800;
-            letter-spacing: 2px;
-            margin-bottom: 8px;
+            font-size: 3rem;
+            font-weight: 900;
+            letter-spacing: 0.3em;
+            margin-bottom: 16px;
         }
 
         .hero-subtitle {
             font-size: 1rem;
             color: #d1d5db;
-            max-width: 420px;
-            margin-bottom: 16px;
-        }
-
-        .hero-badge {
-            display: inline-block;
-            padding: 4px 10px;
-            border-radius: 999px;
-            border: 1px solid rgba(148,163,184,0.8);
-            font-size: 0.8rem;
-            margin-bottom: 8px;
-            color: #e5e7eb;
+            max-width: 600px;
+            margin: 0 auto 26px auto;
         }
 
         .hero-actions {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 10px;
+            gap: 14px;
+            justify-content: center;
         }
 
-        .hero-visual {
-            flex: 1 1 240px;
-            min-height: 180px;
-            border-radius: 24px;
-            border: 1px solid rgba(148,163,184,0.6);
-            background: radial-gradient(circle at top,#1f2937 0,#020617 70%);
-            box-shadow: 0 0 24px rgba(56,189,248,0.5);
-            position: relative;
-            overflow: hidden;
+        .hero-actions .btn-primary {
+            padding: 12px 28px;
+            font-size: 1rem;
         }
 
-        .hero-visual::before {
-            content: "";
-            position: absolute;
-            inset: -40%;
-            background:
-                    radial-gradient(circle at 10% 20%, rgba(56,189,248,0.25), transparent 55%),
-                    radial-gradient(circle at 80% 10%, rgba(168,85,255,0.3), transparent 55%),
-                    radial-gradient(circle at 50% 80%, rgba(248,250,252,0.12), transparent 55%);
-            animation: heroGlow 8s infinite alternate;
-        }
-
-        @keyframes heroGlow {
-            0% { transform: translate3d(0,0,0); }
-            100% { transform: translate3d(-10px,-15px,0); }
-        }
-
-        .hero-visual-content {
-            position: relative;
-            z-index: 2;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100%;
-        }
-
-        .hero-visual-title {
-            font-size: 1.2rem;
-            font-weight: 600;
-            margin-bottom: 6px;
-        }
-
-        .hero-visual-tagline {
-            font-size: 0.9rem;
-            color: #cbd5f5;
-        }
-
-        .hero-visual-row {
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
-            font-size: 0.8rem;
-            color: #e5e7eb;
+        .hero-actions .btn-secondary {
+            padding: 12px 24px;
+            font-size: 0.95rem;
         }
 
         /* ============================================================
@@ -407,7 +363,7 @@
             margin: 10px auto 0 auto;
             padding: 10px 20px 30px 20px;
             position: relative;
-            z-index: 5; /* above stars */
+            z-index: 5;
         }
 
         .store-layout { display: flex; gap: 20px; margin-top: 10px; }
@@ -474,7 +430,7 @@
         }
 
         .product:hover img {
-            transform: scale(1.04); /* zoom on hover */
+            transform: scale(1.04);
         }
 
         .product h3 {
@@ -485,7 +441,6 @@
             margin: 0 0 10px 0;
         }
 
-        /* Highlight when matched by search */
         .product-highlight {
             border-color: #38bdf8;
             box-shadow: 0 0 28px rgba(56,189,248,0.95);
@@ -509,7 +464,6 @@
             box-shadow: 0 0 14px rgba(0,0,0,0.6);
         }
 
-        /* Pants discount styling */
         .old-price {
             text-decoration: line-through;
             color: #9ca3af;
@@ -797,6 +751,47 @@
         }
 
         /* ============================================================
+           ADDED-TO-CART POPUP
+        ============================================================ */
+        #cartPopup {
+            position: fixed;
+            inset: 0;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            background: rgba(0,0,0,0.55);
+            z-index: 11;
+        }
+
+        #cartPopupCard {
+            background: rgba(17,24,39,0.98);
+            border-radius: 16px;
+            padding: 18px 20px;
+            min-width: 260px;
+            max-width: 90vw;
+            border: 1px solid #4b5563;
+            box-shadow: 0 0 26px rgba(15,23,42,1);
+            position: relative;
+            text-align: center;
+            font-size: 0.95rem;
+        }
+
+        #cartPopupClose {
+            position: absolute;
+            top: 6px;
+            right: 8px;
+            border: none;
+            background: transparent;
+            color: #9ca3af;
+            font-size: 1.1rem;
+            cursor: pointer;
+        }
+
+        #cartPopupClose:hover {
+            color: #f9fafb;
+        }
+
+        /* ============================================================
            FOOTER
         ============================================================ */
         footer {
@@ -829,14 +824,6 @@
                 gap: 10px;
             }
 
-            #homeSection {
-                flex-direction: column;
-            }
-
-            .hero-title {
-                font-size: 2rem;
-            }
-
             .store-layout {
                 flex-direction: column;
             }
@@ -857,6 +844,11 @@
             #floatingContact {
                 right: 10px;
                 bottom: 10px;
+            }
+
+            .hero-title {
+                font-size: 2.3rem;
+                letter-spacing: 0.2em;
             }
         }
 
@@ -901,7 +893,7 @@
     </div>
 </header>
 
-<!-- Hero / Home Section -->
+<!-- HERO / HOME SECTION -->
 <section id="homeSection">
     <div class="hero-text">
         <div class="hero-badge">STELLAR MKN • STREETWEAR FROM ANOTHER GALAXY</div>
@@ -913,24 +905,6 @@
         <div class="hero-actions">
             <button type="button" class="btn btn-primary" onclick="goToShop()">Shop Now</button>
             <button type="button" class="btn btn-secondary" onclick="showContact()">Contact Us</button>
-        </div>
-    </div>
-    <div class="hero-visual">
-        <div class="hero-visual-content">
-            <div>
-                <div class="hero-visual-title">Galaxy Fit • Stellar Comfort</div>
-                <div class="hero-visual-tagline">Pants, hoods, caps & tees tuned for everyday orbit.</div>
-            </div>
-            <div class="hero-visual-row">
-                <div>
-                    ⚡ 100% cotton
-                    <br>⭐ Limited stock
-                </div>
-                <div>
-                    🚀 Pickup G-1657
-                    <br>📦 Delivery available
-                </div>
-            </div>
         </div>
     </div>
 </section>
@@ -1125,6 +1099,14 @@
     <button type="button" class="btn btn-secondary" onclick="showContact()">Contact Us</button>
 </div>
 
+<!-- ADDED TO CART POPUP -->
+<div id="cartPopup">
+    <div id="cartPopupCard">
+        <button id="cartPopupClose" onclick="hideCartPopup()">✕</button>
+        <div id="cartPopupMessage">Item added to cart.</div>
+    </div>
+</div>
+
 <!-- FOOTER -->
 <footer>
     © <span id="yearSpan"></span> Stellar MKN. All rights reserved.
@@ -1151,6 +1133,7 @@
        CART LOGIC
     ============================================================ */
     let cart = [];
+    let cartPopupTimeout = null;
 
     function updateCart() {
         const cartItems = document.getElementById("cartItems");
@@ -1174,10 +1157,32 @@
         cartTotal.textContent = total.toFixed(2);
     }
 
+    function showCartPopup(message) {
+        const popup = document.getElementById("cartPopup");
+        const msg = document.getElementById("cartPopupMessage");
+        msg.textContent = message || "Item added to cart.";
+        popup.style.display = "flex";
+
+        if (cartPopupTimeout) clearTimeout(cartPopupTimeout);
+        cartPopupTimeout = setTimeout(() => {
+            hideCartPopup();
+        }, 1500);
+    }
+
+    function hideCartPopup() {
+        const popup = document.getElementById("cartPopup");
+        popup.style.display = "none";
+        if (cartPopupTimeout) {
+            clearTimeout(cartPopupTimeout);
+            cartPopupTimeout = null;
+        }
+    }
+
     function addToCart(name, price, event) {
         if (event) event.stopPropagation();
         cart.push({name, price});
         updateCart();
+        showCartPopup(name + " added to cart.");
     }
 
     function removeFromCart(i) {
@@ -1256,15 +1261,12 @@
     function goToShop() {
         const curtain = document.getElementById("curtain");
 
-        // bring curtain down first
         curtain.style.transform = "translateY(0%)";
 
-        // then slide it back up after a short moment
         setTimeout(() => {
             curtain.style.transform = "translateY(-100%)";
         }, 450);
 
-        // scroll to shop a bit after animation starts
         setTimeout(() => {
             const shop = document.getElementById("shopSection");
             shop.scrollIntoView({ behavior: "smooth", block: "start" });
@@ -1415,14 +1417,13 @@
     const productData = {
         p1: {
             name: "Stellar Pants",
-            price: 120, // discounted price used in cart & email
+            price: 120,
             img: "images/pants.png",
             fit: "Relaxed, slightly tapered fit designed for all-day comfort.",
             material: "100% cotton, mid-weight, breathable and soft on skin.",
             wash: "Machine wash cold with similar colours. Do not bleach. Tumble dry low or hang to dry. Iron inside out.",
             tag: "Preorders available now (pants only)."
         }
-        // p2,p3,p4 are coming soon & disabled, so no detail data needed
     };
 
     let currentDetailId = null;
@@ -1430,7 +1431,7 @@
 
     function openProductDetail(productId) {
         const data = productData[productId];
-        if (!data) return; // ignore coming soon items
+        if (!data) return;
 
         currentDetailId = productId;
         currentDetailSize = null;
@@ -1467,7 +1468,7 @@
         const data = productData[currentDetailId];
         cart.push({ name: data.name, price: data.price, size: currentDetailSize });
         updateCart();
-        alert("Added " + data.name + " (" + currentDetailSize + ") to cart.");
+        showCartPopup(data.name + " (" + currentDetailSize + ") added to cart.");
     }
 
     document.querySelectorAll(".size-pill").forEach(pill => {
@@ -1478,7 +1479,6 @@
         });
     });
 
-    // Only make products with data-available="true" open detail
     document.querySelectorAll(".product").forEach(prod => {
         if (prod.dataset.available === "true") {
             prod.addEventListener("click", () => {
