--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@
 
         .hidden { display: none !important; }
 
+        /* red cart note */
+        .cart-note {
+            font-size: 0.85rem;
+            color: #f97373;
+            margin-top: 8px;
+        }
+
         /* ============================================================
            HERO / HOME SECTION (FULL HEIGHT)
         ============================================================ */
@@ -951,6 +958,12 @@
             Please enter your house / building number for delivery:
         </label><br>
         <input id="deliveryAddress" type="text" placeholder="House / Building number">
+    </div>
+
+    <!-- RED PRE-ORDER NOTE -->
+    <div class="cart-note">
+        Note: Pre-ordering now is to save your spot! All payments are made at pickup mid January.
+        Save your spot now before we run out.
     </div>
 
     <!-- Customer info -->
